#175 - Graph-to-Guide button fix

--- a/savis4/src/app/features/bar-chart/bar-chart.component.scss
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.scss
@@ -107,7 +107,7 @@ $secondary-color: #5ebe5e;
 $slider-active-color: var(--ninth-col);
 $slider-track-color: var(--ninth-col);
 
-button {
+button, .btn {
   background: var(--third-col);
   color: white;
   padding: 10px;
