--- a/savis4/src/app/features/correlation/correlation.component.html
+++ b/savis4/src/app/features/correlation/correlation.component.html
@@ -3,22 +3,26 @@
 
   <!--link to user manual -->
   <div class="manual-link">
-    <button
+    <a
       class="btn manual-btn"
       type="button"
-      [routerLink]="['/correlation-manual']">
+      [routerLink]="['/correlation-manual']"
+      target="_blank"
+      rel="noopener norefferer">
         Correlation Component Guide
-    </button>
+    </a>
   </div>
 
   <!--link to practice problems-->
   <div class = "problems-link">
-      <button
+      <a
           class = "btn problems-btn"
           type = "button"
-          [routerLink] ="['/problems-correlation']">
+          [routerLink] ="['/problems-correlation']"
+          target="_blank"
+          rel="noopener norefferer">
             Correlation Practice Problems
-      </button>
+      </a>
   </div>
 
 
