--- a/savis4/src/app/features/dot-chart/dot-chart.component.html
+++ b/savis4/src/app/features/dot-chart/dot-chart.component.html
@@ -3,22 +3,26 @@
 
     <!--link to user manual -->
     <div class="manual-link">
-    <button
+    <a
         class="btn manual-btn"
         type="button"
-        [routerLink]="['/dot-plot']">
+        [routerLink]="['/dot-plot']"
+        target="_blank"
+        rel="noopener norefferer">
         Dot Plot Guide
-    </button>
+    </a>
     </div>
 
     <!--link to practice problems-->
     <div class="problems-link">
-        <button
+        <a
             class="btn problems-btn"
             type="button"
-            [routerLink]="['/problems-dot-plot']">
+            [routerLink]="['/problems-dot-plot']"
+            target="_blank"
+            rel="noopener norefferer">
                 Dot Plot Practice Problems
-        </button>
+        </a>
     </div>
 
 
