--- a/savis4/src/app/features/linear-regression/linear-regression.component.html
+++ b/savis4/src/app/features/linear-regression/linear-regression.component.html
@@ -4,22 +4,26 @@
 
 <!--link to user manual -->
 <div class="manual-link">
-  <button
+  <a
     class="btn manual-btn"
     type="button"
-    [routerLink]="['/regression']">
+    [routerLink]="['/regression']"
+    target="_blank"
+    rel="noopener norefferer">
        Linear Regression Guide
-  </button>
+  </a>
 </div>
 
 <!--link to practice problems-->
 <div class="problems-link">
-  <button
+  <a
     class="btn problems-btn"
     type="button"
-    [routerLink]="['/problems-regression']">
+    [routerLink]="['/problems-regression']"
+    target="_blank"
+    rel="noopener norefferer">
       Linear Regression Practice Problems
-  </button>
+  </a>
 </div>
 
 <!-- contents -->
