--- a/savis4/src/app/features/one-mean/one-mean.component.html
+++ b/savis4/src/app/features/one-mean/one-mean.component.html
@@ -3,22 +3,26 @@
 
     <!--link to user manual -->
     <div class="manual-link">
-    <button
+    <a
         class="btn manual-btn"
         type="button"
-        [routerLink]="['/omht']">
+        [routerLink]="['/omht']"
+        target="_blank"
+        rel="noopener norefferer">
             One Mean Hypothesis Testing Guide
-    </button>
+    </a>
     </div>
 
     <!--link to practice problems-->
     <div class="problems-link">
-    <button
+    <a
         class="btn problems-btn"
         type="button"
-        [routerLink]="['/problems-omht']">
+        [routerLink]="['/problems-omht']"
+        target="_blank"
+        rel="noopener norefferer">
             One Mean Hypothesis Testing Practice Problems
-    </button>
+    </a>
     </div>
 
     <body class="flex flex-col min-h-screen">
