--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -3,22 +3,26 @@
 
     <!--link to user manual -->
     <div class="manual-link">
-    <button
+    <a
         class="btn manual-btn"
         type="button"
-        [routerLink]="['/opci']">
+        [routerLink]="['/opci']"
+        target="_blank"
+        rel="noopener norefferer">
             One Proportion Confidence Interval Guide
-    </button>
+    </a>
     </div>
 
     <!--link to practice problems-->
     <div class="problems-link">
-    <button
+    <a
         class="btn problems-btn"
         type="button"
-        [routerLink]="['/problems-opci']">
+        [routerLink]="['/problems-opci']"
+        target="_blank"
+        rel="noopener norefferer">
             One Proportion Confidence Interval Practice Problems
-    </button>
+    </a>
     </div>
 
     <div class="one-proportion-ci">
