--- a/savis4/src/app/features/two-means/two-means.component.html
+++ b/savis4/src/app/features/two-means/two-means.component.html
@@ -3,22 +3,26 @@
 
   <!--link to user manual -->
   <div class="manual-link">
-    <button
+    <a
       class="btn manual-btn"
       type="button"
-      [routerLink]="['/tmht']">
+      [routerLink]="['/tmht']"
+      target="_blank"
+      rel="noopener norefferer">
           Two Mean Hypothesis Testing Guide
-    </button>
+    </a>
   </div>
 
   <!--link to practice problems-->
   <div class="problems-link">
-    <button
+    <a
       class="btn problems-btn"
       type="button"
-      [routerLink]="['/problems-tmht']">
+      [routerLink]="['/problems-tmht']"
+      target="_blank"
+      rel="noopener norefferer">
           Two Mean Hypothesis Testing Practice Problems
-    </button>
+    </a>
   </div>
 
   <div class="p-4">
