--- a/savis4/src/app/features/two-proportions/two-proportions.component.html
+++ b/savis4/src/app/features/two-proportions/two-proportions.component.html
@@ -3,22 +3,26 @@
 
   <!--link to user manual -->
   <div class="manual-link">
-    <button
+    <a
       class="btn manual-btn"
       type="button"
-      [routerLink]="['/tpht']">
+      [routerLink]="['/tpht']"
+      target="_blank"
+      rel="noopener norefferer">
           Two Proportion Hypothesis Testing Guide
-    </button>
+    </a>
   </div>
 
   <!--link to practice problems-->
   <div class="problems-link">
-    <button
+    <a
       class="btn problems-btn"
       type="button"
-      [routerLink]="['/problems-tpht']">
+      [routerLink]="['/problems-tpht']"
+      target="_blank"
+      rel="noopener norefferer">
           Two Proportion Hypothesis Testing Practice Problems
-    </button>
+    </a>
   </div>
 
   <div class="p-4">
