--- a/savis4/src/app/features/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.html
@@ -2,22 +2,26 @@
     <app-navbar></app-navbar>
     <!--link to user manual -->
     <div class="manual-link">
-    <button
+    <a
         class="btn manual-btn"
         type="button"
-        [routerLink]="['/bar-chart']">
+        [routerLink]="['/bar-chart']"
+        target="_blank"
+        rel="noopener norefferer">
         Bar Chart Guide
-    </button>
+    </a>
     </div>
 
     <!--link to practice problems-->
     <div class = "problems-link">
-        <button
+        <a
             class = "btn problems-btn"
             type = "button"
-            [routerLink] ="['/problems-bar-chart']">
+            [routerLink] ="['/problems-bar-chart']"
+            target="_blank"
+            rel="noopener norefferer">
                 Bar Chart Practice Problems
-        </button>
+        </a>
     </div>
         
 
