--- a/savis4/src/app/features/one-proportion/one-proportion.component.html
+++ b/savis4/src/app/features/one-proportion/one-proportion.component.html
@@ -3,22 +3,26 @@
 
   <!--link to user manual -->
   <div class="manual-link">
-    <button
+    <a
       class="btn manual-btn"
       type="button"
-      [routerLink]="['/opht']">
+      [routerLink]="['/opht']"
+      target="_blank"
+      rel="noopener norefferer">
           One Proportion Hypothesis Testing Guide
-    </button>
+    </a>
   </div>
 
   <!--link to practice problems-->
   <div class="problems-link">
-    <button
+    <a
       class="btn problems-btn"
       type="button"
-      [routerLink]="['/problems-opht']">
+      [routerLink]="['/problems-opht']"
+      target="_blank"
+      rel="noopener norefferer">
           One Proportion Hypothesis Testing Practice Problems
-    </button>
+    </a>
   </div>
 
   <div class="oneProportion">
