--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -2,22 +2,26 @@
   <app-navbar></app-navbar>
   <!--link to user manual -->
   <div class="manual-link">
-    <button
+    <a
       class="btn manual-btn"
       type="button"
-      [routerLink]="['/tpci']">
+      [routerLink]="['/tpci']"
+      target="_blank"
+      rel="noopener norefferer">
           Two Proportion Confidence Interval Guide
-    </button>
+    </a>
   </div>
 
   <!--link to practice problems-->
   <div class="problems-link">
-    <button
+    <a
       class="btn problems-btn"
       type="button"
-      [routerLink]="['/problems-tpci']">
+      [routerLink]="['/problems-tpci']"
+      target="_blank"
+      rel="noopener norefferer">
           Two Proportion Confidence Interval Practice Problems
-    </button>
+    </a>
   </div>
 
   <div class="two-proportions">
