--- a/savis4/src/styles.scss
+++ b/savis4/src/styles.scss
@@ -12,7 +12,7 @@
     --fifth-col:rgb(250,250,250); //background col
     --sixth-col:gray; //input box col
     --seventh-col:#5ebe5e;//graph input button (PRIMARY)
-    --eighth-col: rgb(250,250,250);
+    --eighth-col: rgb(250,250,250); //graphs bg color
     --ninth-col:#bfbfbf; //run simulation button (active/tracker color)
 }
 .darkMode{
@@ -24,6 +24,6 @@
     --fifth-col:rgb(62,62,66); //background col
     --sixth-col: rgb(250,250,250);
     --seventh-col:#93cb52;//graph input button (PRIMARY)
-    --eighth-col: rgb(230,230,230);
+    --eighth-col: rgb(230,230,230); //graphs bg color
     --ninth-col:rgb(45,45,48); //run simulation button (active/tracker color)
 }
