#176 - Guide-to Graph button implementation

--- a/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.scss
+++ b/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.scss
@@ -1,3 +1,8 @@
+.body-box{
+  min-height:100vh;
+  background-color: var(--fifth-col);
+}
+
 .bar-chart-container {
   min-height:100vh;
   background-color: var(--fifth-col);
@@ -9,14 +14,14 @@
     margin-bottom: 30px;
   }
 
-  .back-button {
+  .back-button, .btn {
     margin-left: 40px;
     margin-bottom: 20px;
     margin-top: 20px;
     padding: 10px 15px;
     font-size: 1.2rem;
-    border-radius: 10px;
-    color: beige;
+    border-radius: 5px;
+    color: white;
     text-decoration: none;
     cursor: pointer;
     display: inline-block;
@@ -26,6 +31,15 @@
   .back-button:hover{
     background-color: var(--fourth-col);
   }
+
+  .graph-link{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0.5rem 1rem 0;  
+  margin-top: 16px;
+  margin-bottom: 0.5rem;
+}
 
   .content {
     display: flex;
@@ -111,7 +125,7 @@ h1{
     background-color: var(--third-col);
     border-radius: 2px;
     font-family: 'Poppins', sans-serif;
-    color: beige;
+    color: white;
     text-align: center;
 }
 
