--- a/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.html
@@ -1,6 +1,18 @@
+<div class='body-box'>
 <app-navbar></app-navbar>
 
 <div class="bar-chart-container">
+    <!--link to grraph page-->
+    <div class = "graph-link">
+        <a
+            class = "btn problems-btn"
+            type = "button"
+            [routerLink] ="['/barchart']"
+            target="_blank"
+            rel="noopener norefferer">
+                Bar Chart Graph
+        </a>
+    </div>
   <h1 class="title">{{'uman_bar-chart_title' | translate}}</h1>
   <div button="back" routerLink="/user-manual" class="back-button">
       &larr; {{ 'uman_back' | translate }}
@@ -19,5 +31,5 @@
 
   <p></p>
 </div>
-
+</div>
 <app-footer></app-footer>
